src/pd.zig


// ----------------------------------- GList -----------------------------------
// -----------------------------------------------------------------------------
pub const GList = opaque {
	extern fn canvas_makefilename(*const GList, [*]const u8, [*]u8, u32) void;
	pub const makeFilename = canvas_makefilename;
	extern fn canvas_getdir(*const GList) *Symbol;
	pub const dir = canvas_getdir;
	extern fn canvas_dataproperties(*GList, *Scalar, *BinBuf) void;
	pub const dataProperties = canvas_dataproperties;
	extern fn canvas_open(
		*const GList, [*]const u8, [*]const u8, [*]u8, *[*]u8, u32, u32) i32;
	pub const open = canvas_open;
	extern fn canvas_getsr(*GList) Float;
	pub const sampleRate = canvas_getsr;
	extern fn canvas_getsignallength(*GList) u32;
	pub const signalLength = canvas_getsignallength;
	extern fn pd_undo_set_objectstate(
		*GList, *Pd, *Symbol, u32, [*]Atom, u32, [*]Atom) void;
	pub const undoSetState = pd_undo_set_objectstate;
	// static methods
	extern fn canvas_setargs(u32, [*]const Atom) void;
	pub const setArgs = canvas_setargs;
	extern fn canvas_getargs(*u32, *[*]Atom) void;
	pub const args = canvas_getargs;
	extern fn canvas_getcurrent() ?*GList;
	pub const current = canvas_getcurrent;
};


// --------------------------------- GPointer ----------------------------------
// -----------------------------------------------------------------------------
pub const Scalar = extern struct {
	gobj: GObj,
	template: *Symbol,
	vec: [1]Word,
};

pub const GStub = extern struct {
	un: extern union {
		glist: *GList,
		array: *Array,
	},
	which: enum(u32) {
		none,
		glist,
		array,
	},
	refcount: i32,
};

pub const GPointer = extern struct {
	un: extern union {
		scalar: *Scalar,
		w: *Word,
	},
	valid: i32,
	stub: *GStub,

	extern fn gpointer_init(*GPointer) void;
	pub const init = gpointer_init;
	extern fn gpointer_copy(*const GPointer, *GPointer) void;
	pub const copy = gpointer_copy;
	extern fn gpointer_unset(*GPointer) void;
	pub const unset = gpointer_unset;
	extern fn gpointer_check(*const GPointer, u32) u32;
	pub const check = gpointer_check;
};


// ----------------------------------- Inlet -----------------------------------
// -----------------------------------------------------------------------------
pub const Inlet = extern struct {
	pd: Pd,
	next: ?*Inlet,
	owner: *Object,
	dest: ?*Pd,
	symfrom: *Symbol,
	un: extern union {
		symto: *Symbol,
		pointerslot: *GPointer,
		floatslot: *Float,
		symslot: **Symbol,
		floatsignalvalue: Float,
	},

	extern fn inlet_free(*Inlet) void;
	pub const free = inlet_free;
};


// ---------------------------------- Memory -----------------------------------
// -----------------------------------------------------------------------------
const Allocator = @import("std").mem.Allocator;
const assert = @import("std").debug.assert;

extern fn getbytes(usize) ?[*]u8;
fn alloc(_: *anyopaque, len: usize, _: u8, _: usize) ?[*]u8 {
	assert(len > 0);
	return getbytes(len);
}

fn resize(_: *anyopaque, buf: []u8, _: u8, new_len: usize, _: usize) bool {
	return (new_len <= buf.len);
}

extern fn freebytes(*anyopaque, usize) void;
fn free(_: *anyopaque, buf: []u8, _: u8, _: usize) void {
	freebytes(buf.ptr, buf.len);
}

const mem_vtable = Allocator.VTable {
	.alloc = alloc,
	.resize = resize,
	.free = free,
};
pub const mem = Allocator {
	.ptr = undefined,
	.vtable = &mem_vtable,
};


// ---------------------------------- Object -----------------------------------
// -----------------------------------------------------------------------------
pub const GObj = extern struct {
	pd: Pd,
	next: *GObj,
};

pub const Object = extern struct {
	g: GObj,
	binbuf: *BinBuf,
	out: ?*Outlet,
	in: ?*Inlet,
	xpix: i16,
	ypix: i16,
	width: i16,
	type: enum(u8) {
		text = 0,
		object = 1,
		message = 2,
		atom = 3,
	},

	extern fn obj_list(*Object, *Symbol, u32, [*]Atom) void;
	pub const list = obj_list;
	extern fn obj_saveformat(*const Object, ?*BinBuf) void;
	pub const saveFormat = obj_saveformat;
	extern fn outlet_new(*Object, *Symbol) *Outlet;
	pub const outlet = outlet_new;
	extern fn inlet_new(*Object, *Pd, ?*Symbol, ?*Symbol) *Inlet;
	pub const inlet = inlet_new;
	extern fn pointerinlet_new(*Object, *GPointer) *Inlet;
	pub const inletPointer = pointerinlet_new;
	extern fn floatinlet_new(*Object, *Float) *Inlet;
	pub const inletFloat = floatinlet_new;
	extern fn symbolinlet_new(*Object, **Symbol) *Inlet;
	pub const inletSymbol = symbolinlet_new;
	extern fn signalinlet_new(*Object, Float) *Inlet;
	pub const inletSignal = signalinlet_new;

	pub inline fn inletFloatArg(obj: *Object, fp: *Float, av: []const Atom, i: usize)
	*Inlet {
		fp.* = (&av[0]).floatArg(@intCast(i), @intCast(av.len));
		return obj.inletFloat(fp);
	}

	pub inline fn inletSymbolArg(obj: *Object, sp: **Symbol, av: []const Atom, i: usize)
	*Inlet {
		sp.* = (&av[0]).symbolArg(@intCast(i), @intCast(av.len));
		return obj.inletSymbol(sp);
	}

};


// ---------------------------------- Outlet -----------------------------------
// -----------------------------------------------------------------------------
pub const Outlet = opaque {
	extern fn outlet_bang(*Outlet) void;
	pub const bang = outlet_bang;
	extern fn outlet_pointer(*Outlet, *GPointer) void;
	pub const pointer = outlet_pointer;
	extern fn outlet_float(*Outlet, Float) void;
	pub const float = outlet_float;
	extern fn outlet_symbol(*Outlet, *Symbol) void;
	pub const symbol = outlet_symbol;
	extern fn outlet_list(*Outlet, ?*Symbol, u32, [*]Atom) void;
	pub const list = outlet_list;
	extern fn outlet_anything(*Outlet, *Symbol, u32, [*]Atom) void;
	pub const anything = outlet_anything;
	extern fn outlet_getsymbol(*Outlet) *Symbol;
	pub const toSymbol = outlet_getsymbol;
	extern fn outlet_free(*Outlet) void;
	pub const free = outlet_free;
};


// ------------------------------------ Pd -------------------------------------
// -----------------------------------------------------------------------------
pub const Pd = extern struct {
	_: *const Class,

	extern fn pd_free(*Pd) void;
	pub const free = pd_free;
	extern fn pd_bind(*Pd, *Symbol) void;
	pub const bind = pd_bind;
	extern fn pd_unbind(*Pd, *Symbol) void;
	pub const unbind = pd_unbind;
	extern fn pd_pushsym(*Pd) void;
	pub const pushSymbol = pd_pushsym;
	extern fn pd_popsym(*Pd) void;
	pub const popSymbol = pd_popsym;
	extern fn pd_bang(*Pd) void;
	pub const bang = pd_bang;
	extern fn pd_pointer(*Pd, *GPointer) void;
	pub const pointer = pd_pointer;
	extern fn pd_float(*Pd, Float) void;
	pub const float = pd_float;
	extern fn pd_symbol(*Pd, *Symbol) void;
	pub const symbol = pd_symbol;
	extern fn pd_list(*Pd, *Symbol, u32, [*]Atom) void;
	pub const list = pd_list;
	extern fn pd_anything(*Pd, *Symbol, u32, [*]Atom) void;
	pub const anything = pd_anything;
	extern fn pd_vmess(*Pd, *Symbol, [*]const u8, ...) void;
	pub const vMess = pd_vmess;
	extern fn pd_typedmess(*Pd, *Symbol, u32, [*]Atom) void;
	pub const typedMess = pd_typedmess;
	extern fn pd_forwardmess(*Pd, u32, [*]Atom) void;
	pub const forwardMess = pd_forwardmess;
	extern fn pd_checkobject(*Pd) ?*Object;
	pub const checkObject = pd_checkobject;
	extern fn pd_getparentwidget(*Pd) ?*const ParentWidgetBehavior;
	pub const parentWidget = pd_getparentwidget;
	extern fn gfxstub_new(*Pd, ?*anyopaque, [*]const u8) void;
	pub const gfxStub = gfxstub_new;
	extern fn pdgui_stub_vnew(*Pd, [*]const u8, ?*anyopaque, [*]const u8, ...) void;
	pub const guiStub = pdgui_stub_vnew;
	extern fn getfn(*const Pd, *Symbol) GotFn;
	pub const func = getfn;
	extern fn zgetfn(*const Pd, *Symbol) GotFn;
	pub const zFunc = zgetfn;
	extern fn pd_newest() *Pd;
	pub const newest = pd_newest; // static
};


// --------------------------------- Resample ----------------------------------
// -----------------------------------------------------------------------------
pub const Resample = extern struct {
	method: i32,
	downsample: i32,
	upsample: i32,
	vec: [*]Sample,
	n: u32,
	coeffs: [*]Sample,
	coefsize: u32,
	buffer: [*]Sample,
	bufsize: u32,

	extern fn resample_init(*Resample) void;
	pub const init = resample_init;
	extern fn resample_free(*Resample) void;
	pub const free = resample_free;
	extern fn resample_dsp(*Resample, [*]Sample, u32, [*]Sample, u32, u32) void;
	pub const dsp = resample_dsp;
	extern fn resamplefrom_dsp(*Resample, [*]Sample, u32, u32, u32) void;
	pub const fromDsp = resamplefrom_dsp;
	extern fn resampleto_dsp(*Resample, [*]Sample, u32, u32, u32) void;
	pub const toDsp = resampleto_dsp;
};


// ---------------------------------- Signal -----------------------------------
// -----------------------------------------------------------------------------
pub const Signal = extern struct {
	len: u32,
	vec: [*]Sample,
	srate: Float,
	nchans: u32,
	overlap: i32,
	refcount: i32,
	isborrowed: i32,
	isscalar: i32,
	borrowedfrom: *Signal,
	nextfree: *Signal,
	nextused: *Signal,
	nalloc: i32,
};
extern fn signal_new(u32, u32, Float, [*]Sample) *Signal;
pub const signal = signal_new;
extern fn signal_setmultiout(*[*]Signal, u32) void;
pub const setMultiOut = signal_setmultiout;


// ---------------------------------- Symbol -----------------------------------
// -----------------------------------------------------------------------------
pub const Symbol = extern struct {
	name: [*:0]const u8,
	thing: ?*Pd,
	next: ?*Symbol,

	extern fn class_set_extern_dir(*Symbol) void;
	pub const setExternDir = class_set_extern_dir;
	extern fn text_getbufbyname(*Symbol) ?*BinBuf;
	pub const buf = text_getbufbyname;
	extern fn text_notifybyname(*Symbol) void;
	pub const notify = text_notifybyname;
	extern fn value_get(*Symbol) *Float;
	pub const val = value_get;
	extern fn value_release(*Symbol) void;
	pub const releaseVal = value_release;
	extern fn value_getfloat(*Symbol, *Float) u32;
	pub const float = value_getfloat;
	extern fn value_setfloat(*Symbol, Float) u32;
	pub const setFloat = value_setfloat;
};
extern fn gensym([*]const u8) *Symbol;
pub const symbol = gensym;

pub const s = struct {
	extern var s_pointer: Symbol;
	pub const pointer = &s_pointer;
	extern var s_float: Symbol;
	pub const float = &s_float;
	extern var s_symbol: Symbol;
	pub const symbol = &s_symbol;
	extern var s_bang: Symbol;
	pub const bang = &s_bang;
	extern var s_list: Symbol;
	pub const list = &s_list;
	extern var s_anything: Symbol;
	pub const anything = &s_anything;
	extern var s_signal: Symbol;
	pub const signal = &s_signal;
	extern var s__N: Symbol;
	pub const _N = &s__N;
	extern var s__X: Symbol;
	pub const _X = &s__X;
	extern var s_x: Symbol;
	pub const x = &s_x;
	extern var s_y: Symbol;
	pub const y = &s_y;
	extern var s_: Symbol;
	pub const _ = &s_;
};

